# arkanoid-nine-hells

./: .gitignore  .gitignore~  ArkanoidNineHells  CMakeLists.txt  LICENSE  README.md  config.json  scoreboard.txt
assets/: SphereA.png.bak  avernus.xcf  avernus_bricks.xcf  crack.xcf  dock.xcf  logo.xcf  numbers.xcf  skyship.png~  spell_cell.xcf  spells.xcf
data/: enemies.json  levels.json  menu.json  ships.json  skyships.json  spells.json  spheres.json
include/: Ball.hpp  EnemyManager.hpp  EntityManager.hpp  Game.hpp  GameManager.hpp  GameObject.hpp  Map.hpp  MapManager.hpp  Player.hpp  Power.hpp  PowerManager.hpp  Ship.hpp  SpellManager.hpp  Sphere.hpp  TextureManager.hpp  Timer.hpp  Window.hpp
src/: Ball.cpp  EnemyManager.cpp  EntityManager.cpp  Game.cpp  GameManager.cpp  GameObject.cpp  Map.cpp  MapManager.cpp  Player.cpp  Power.cpp  PowerManager.cpp  Ship.cpp  SpellManager.cpp  Sphere.cpp  TextureManager.cpp  Timer.cpp  Window.cpp  main.cpp
